objects/Pracovni_historie__c/Pracovni_historie__c.object-meta.xml
<CustomObject>
    <description>Popisuje vazbu kontaktu na firmu v rámci ukončené spolupráce nebo rozvoje kontaktu.</description>
    <label>Pracovní historie</label>
    <nameField>
        <displayFormat>PH-{00000}</displayFormat>
        <label>Kód pracovní historie</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pracovní historie</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>