objects/Pracovni_historie__c/fields/Firma__c.field-meta.xml
<CustomField>
    <fullName>Firma__c</fullName>
    <description>S kterou firmou spolupracoval nebo ve které pracoval</description>
    <inlineHelpText>S kterou firmou spolupracoval nebo ve které pracoval</inlineHelpText>
    <label>Firma</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pracovní historie</relationshipLabel>
    <relationshipName>Pracovni_historie</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>