objects/Pracovni_historie__c/fields/Kontakt__c.field-meta.xml
<CustomField>
    <fullName>Kontakt__c</fullName>
    <description>Ke kterému kontaktu se pracovní historie (firma) vztahuje.</description>
    <inlineHelpText>Ke kterému kontaktu se pracovní historie (firma) vztahuje.</inlineHelpText>
    <label>Kontakt</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pracovní historie</relationshipLabel>
    <relationshipName>Pracovni_historie</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>