objects/Pracovni_historie__c/fields/Poznamka__c.field-meta.xml
<CustomField>
    <fullName>Poznamka__c</fullName>
    <description>Poznámka</description>
    <inlineHelpText>Poznámka</inlineHelpText>
    <label>Poznámka</label>
    <type>TextArea</type>
</CustomField>